question success handling.  random stab at iphone overflow issue.

--- a/wedding-ui/src/styles/_global.scss
+++ b/wedding-ui/src/styles/_global.scss
@@ -5,6 +5,8 @@
 html,
 body {
   font-size: $theme-font-size-base;
+  margin: 0;
+  padding: 0;
 }
 
 body {
